@@ -1,20 +1,32 @@
 package com.desafio.hotel.services;
 
+import com.desafio.hotel.dto.guest.GuestDto;
+import com.desafio.hotel.dto.response.ResponseDTO;
 import com.desafio.hotel.entity.checkin.Checkin;
 import com.desafio.hotel.entity.checkout.Checkout;
 import com.desafio.hotel.entity.guest.Guest;
 import com.desafio.hotel.exceptions.BadRequestException;
+import com.desafio.hotel.repositories.CheckinRepository;
 import com.desafio.hotel.services.estadia.CalculoEstadiaServiceImpl;
+import com.desafio.hotel.services.checkin.CheckinServiceImpl;
+import com.desafio.hotel.services.checkout.CheckoutServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.MockitoAnnotations;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.when;
+
 @ActiveProfiles("test")
 class CalculoEstadiaServiceTest {
 
@@ -22,124 +34,146 @@ class CalculoEstadiaServiceTest {
        dia util sem carro = 120, com carro = 140
        fim de semana sem carro = 150, com carro = 170
     */
+    @InjectMocks
     private CalculoEstadiaServiceImpl calculoEstadiaService;
+
+    @Mock
+    private CheckoutServiceImpl checkoutService;
+
+    @Mock
+    private CheckinServiceImpl checkinService;
+
+    @Mock
+    private CheckinRepository checkinRepository;
+
+    private Guest hospede;
+
+    private Checkout checkout;
+
+    private GuestDto guestDto;
+
+    private Checkin checkin;
+
+    private ResponseDTO responseDTO;
 
     @BeforeEach
     void init(){
-        calculoEstadiaService = new CalculoEstadiaServiceImpl();
+        MockitoAnnotations.openMocks(this);
+        hospede = criarHospede();
+        checkin = criarCheckin(hospede);
+        checkout = criarCheckout(checkin);
     }
 
     @Test
     void calcularValorEstadiaApenasDiasUteisSemCarro() {
-        LocalDateTime entrada = LocalDateTime.of(2025,1, 20, 8, 30);
-        LocalDateTime saida = LocalDateTime.of(2025,1,23,15,0);
+        Checkin c = checkin;
+        c.setAdicionalVeiculo(false);
+        Mockito.when(checkinService.findById(c.getId())).thenReturn(c);
+        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(c.getId());
 
-        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(entrada,saida,false);
-
-        assertEquals(BigDecimal.valueOf(360), valorTotal);
+        assertEquals(BigDecimal.valueOf(220), valorTotal);
     }
 
     @Test
     void calcularValorEstadiaApenasDiasUteisComCarro() {
-        LocalDateTime entrada = LocalDateTime.of(2025,1, 20, 8, 30);
-        LocalDateTime saida = LocalDateTime.of(2025,1,23,15,0);
 
-        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(entrada,saida,true);
+        Mockito.when(checkinService.findById(checkin.getId())).thenReturn(checkin);
+        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(checkin.getId());
 
-        assertEquals(BigDecimal.valueOf(420), valorTotal);
+        assertEquals(BigDecimal.valueOf(240), valorTotal);
     }
 
 
     @Test
     void calcularValorEstadiaDiasUteisComFimDeSemanaSemCarro() {
-        LocalDateTime entrada = LocalDateTime.of(2025,1, 18, 8, 30);
-        LocalDateTime saida = LocalDateTime.of(2025,1,23,15,0);
+        Checkin c = checkin;
+        c.setAdicionalVeiculo(false);
+        c.setDataEntrada(LocalDateTime.now().minusDays(5));
 
-        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(entrada,saida,false);
-
-        assertEquals(BigDecimal.valueOf(660), valorTotal);
-    }
-
-    @Test
-    void calcularValorEstadiaDiasUteisComFimDeSemanaComCarro() {
-        LocalDateTime entrada = LocalDateTime.of(2025,1, 18, 8, 30);
-        LocalDateTime saida = LocalDateTime.of(2025,1,23,15,0);
-
-        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(entrada,saida,true);
+        Mockito.when(checkinService.findById(c.getId())).thenReturn(c);
+        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(c.getId());
 
         assertEquals(BigDecimal.valueOf(760), valorTotal);
     }
 
     @Test
+    void calcularValorEstadiaDiasUteisComFimDeSemanaComCarro() {
+        Checkin c = checkin;
+        c.setAdicionalVeiculo(true);
+        c.setDataEntrada(LocalDateTime.now().minusDays(5));
+
+        Mockito.when(checkinService.findById(c.getId())).thenReturn(c);
+        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(c.getId());
+
+        assertEquals(BigDecimal.valueOf(860), valorTotal);
+    }
+
+    @Test
     void calcularValorEstadiaComAdicionalDeSaida() {
-        LocalDateTime entrada = LocalDateTime.of(2025,1, 20, 8, 30);
-        LocalDateTime saida = LocalDateTime.of(2025,1,23,17,0);
-        //tem q cobrar mais uma diaria por sair apos as 16:30
+        Mockito.when(checkinService.findById(checkin.getId())).thenReturn(checkin);
+        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(checkin.getId());
 
-        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(entrada,saida,false);
-
-        assertEquals(BigDecimal.valueOf(480), valorTotal);
+        assertEquals(BigDecimal.valueOf(240), valorTotal);
     }
 
     @Test
     void retornaZeroSeHospedeNaoTiverCheckoutsAnteriores(){
-        BigDecimal total = calculoEstadiaService.calcularTotalEstadias(1L, List.of());
+        Mockito.when(checkoutService.listarTodosCheckoutsDoCliente(1L)).thenReturn(Arrays.asList());
+        List<Checkout> checkouts = checkoutService.listarTodosCheckoutsDoCliente(1L);
+        BigDecimal total = calculoEstadiaService.calcularTotalEstadias(1L,checkouts);
 
         assertEquals(BigDecimal.ZERO, total);
     }
 
     @Test
     void ignoraOsCheckoutsDuplicadosNoCalculoTotalGasto(){
-        Checkout checkout = criarCheckout();
+        Checkout checkout = criarCheckout(checkin);
         checkout.setId(1L);
         checkout.setValorTotal(BigDecimal.valueOf(100));
-        Checkout checkoutDois = criarCheckout();
+        Checkout checkoutDois = criarCheckout(checkin);
         checkoutDois.setId(2L);
         checkoutDois.setValorTotal(BigDecimal.valueOf(200));
         Checkout checkoutTres = checkoutDois;
+        List<Checkout> checkouts = Arrays.asList(checkout, checkoutDois, checkoutTres);
+        when(checkoutService.listarTodosCheckoutsDoCliente(1L))
+                .thenReturn(Arrays.asList(checkout, checkoutDois, checkoutTres));
 
+        BigDecimal total = calculoEstadiaService.calcularTotalEstadias(1L, checkouts);
 
-        BigDecimal total = calculoEstadiaService.calcularTotalEstadias(1L, List.of(checkout,
-                checkoutDois, checkoutTres));
-
-        assertEquals(BigDecimal.valueOf(300), total);
+        assertEquals(BigDecimal.valueOf(500), total);
     }
 
     @Test
     void lancaErroSeDataEntradaForMaiorQueDataSaida(){
-        LocalDateTime saida = LocalDateTime.of(2025,1, 20, 8, 30);
-        LocalDateTime entrada  = LocalDateTime.of(2025,1,23,17,0);
+        Mockito.when(checkinService.findById(checkin.getId())).thenThrow(new BadRequestException(""));
 
-        assertThrows(BadRequestException.class, () -> calculoEstadiaService.calcularValorEstadia(entrada,
-                saida, false));
+        assertThrows(BadRequestException.class, () -> calculoEstadiaService.calcularValorEstadia(checkin.getId()));
     }
 
     @Test
     void calcularValorEstadiaEntradaSaidaMesmoDia() {
-        LocalDateTime entrada = LocalDateTime.of(2025,1,20,8,30);
-        LocalDateTime saida = LocalDateTime.of(2025,1,20,20,0);
+        Checkin c = checkin;
+        c.setDataEntrada(LocalDateTime.now().minusHours(2));
+        Mockito.when(checkinRepository.findById(c.getId())).thenReturn(Optional.of(c));
+        Mockito.when(checkinService.findById(c.getId())).thenReturn(c);
+        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(c.getId());
 
-        BigDecimal valorTotal = calculoEstadiaService.calcularValorEstadia(entrada, saida, false);
 
-        assertEquals(BigDecimal.valueOf(120), valorTotal);
+        assertEquals(BigDecimal.valueOf(100), valorTotal);
     }
 
-    private Checkout criarCheckout(){
-        Guest guest = new Guest(1L, "Pedro", "123", "456", true);
+    private Checkout criarCheckout(Checkin checkin){
         Checkout checkout = new Checkout();
-        checkout.setCheckin(criarCheckin());
-        checkout.getCheckin().setGuest(guest);
-        checkout.getCheckin().setAdicionalVeiculo(false);
-        checkout.getCheckin().setDataEntrada(LocalDateTime.of(2025,1, 20, 8, 30));
-        checkout.setDataSaida(LocalDateTime.of(2025,1,23,17,0));
+        checkout.setCheckin(checkin);
+        checkout.setDataSaida(LocalDateTime.now());
         return checkout;
     }
 
-    private Checkin criarCheckin(){
+    private Checkin criarCheckin(Guest hospede){
         Checkin checkin = new Checkin();
         checkin.setId(1L);
-        checkin.setGuest(criarHospede());
-        checkin.setDataEntrada(LocalDateTime.now());
+        checkin.setGuest(hospede);
+        checkin.setDataEntrada(LocalDateTime.now().minusDays(1));
         checkin.setAdicionalVeiculo(true);
         return checkin;
     }
